# industrial_ros2_manipulation_lab

./: LICENSE  PRACTICE_GUIDE.md  README.md  STARTER_GUIDE.md  UPGRADE.md
.repos/: simulation_dependencies.repos
data/: README.md
docker/: Dockerfile  README.md  compose.yaml  entrypoint.sh
docs/: architecture.md  docker_troubleshooting.md  glossary.md  ubuntu_setup.md  windows_wsl2_setup.md
scripts/: build.sh  check_module.sh  doctor.sh  lab  start_demo.sh  start_module.sh
src/lrwros_bringup/: CMakeLists.txt  package.xml
src/lrwros_bringup/launch/: demo.launch.py  module_03.launch.py
src/lrwros_ur5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/lrwros_ur5_moveit_config/config/: joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  ur.urdf.xacro
src/lrwros_ur5_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/lrwros_ur5_workcell/: CMakeLists.txt  package.xml
src/lrwros_ur5_workcell/config/: initial_positions.yaml  ur5_gripper_controllers.yaml
src/lrwros_ur5_workcell/launch/: spawn_ur5_camera.launch.py  spawn_ur5_camera_gripper.launch.py  spawn_ur5_camera_gripper_moveit.launch.py  spawn_ur5_camera_gripper_world_moveit.launch.py  spawn_ur5_camera_gripper_world_moveit_octomap.launch.py  spawn_ur5_camera_moveit.launch.py  view_ur5_camera.launch.py  view_ur5_camera_gripper.launch.py
src/lrwros_ur5_workcell/urdf/: camera.xacro  robotiq_gripper.ros2_control.xacro  robotiq_gripper_macro.urdf.xacro  ur5_camera.urdf.xacro  ur5_camera_gripper.urdf.xacro  ur5_macro.xacro
tests/: README.md
